shodrone.plugin.proposal/src/main/java/gen/ProposalParser.java
// Generated from ProposalParser.g4 by ANTLR 4.13.2

package gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ProposalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BREAKLINE=1, WS=2, SPACE=3, SYMBOL=4, EXMOS_SENHORES=5, REFERENCIA=6, 
		PROPOSTA_PT=7, ESTANDO_CERTOS_PT=8, SUBSCRIBE_PT=9, BEST_REGARDS_PT=10, 
		LISTA_DRONES_PT=11, LISTA_FIGURAS_PT=12, ANEXO_PT=13, LOCAL_PT=14, DATA_PT=15, 
		HORA_PT=16, DURACAO_PT=17, WORD_MINUTES_PT=18, WORD_UNITS_PT=19, DEAR=20, 
		DEAR_SIRS=21, REFERENCE=22, PROPOSTA_EN=23, BEING_CERTAIN_EN=24, LOOKING_FORWARD=25, 
		SUBSCRIBE_EN=26, BEST_REGARDS_EN=27, LISTA_DRONES_EN=28, LISTA_FIGURAS_EN=29, 
		ANEXO_EN=30, LOCATION_EN=31, DATE_EN=32, TIME_EN=33, DURATION_EN=34, WORD_MINUTES_EN=35, 
		PROP=36, VAT=37, WORD_UNITS_EN=38, DRONE_ENTRY_PT=39, DRONE_ENTRY_EN=40, 
		FIGURE_ENTRY=41, CRM_MANAGER=42, PAGE_BREAK=43, DIGIT=44, LETTER=45, NAME=46, 
		VALUE=47, DOUBLE=48, MODEL=49, SEPARATOR=50, HOUR=51, MINUTE=52, DAY=53, 
		MONTH=54, YEAR=55, CURRENCY=56, INSURANCE_AMOUNT=57, TEXT=58;
	public static final int
		RULE_start = 0, RULE_proposalPT = 1, RULE_proposalEN = 2, RULE_proposalEN_2 = 3, 
		RULE_companyBlock = 4, RULE_companyName = 5, RULE_companyAddress = 6, 
		RULE_companyVat = 7, RULE_body = 8, RULE_proposalId = 9, RULE_locationInfoPT = 10, 
		RULE_locationInfoEN = 11, RULE_droneEntryPT = 12, RULE_droneEntryEN = 13, 
		RULE_figureEntry = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "proposalPT", "proposalEN", "proposalEN_2", "companyBlock", 
			"companyName", "companyAddress", "companyVat", "body", "proposalId", 
			"locationInfoPT", "locationInfoEN", "droneEntryPT", "droneEntryEN", "figureEntry"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'Exmos. Senhores'", null, "'Proposta de Show'", 
			"'Estando certos que seremos alvo da V/ prefer\\u00EAncia.'", "'Subscrevemo-nos ao dispor.'", 
			"'Melhores cumprimentos,'", "'#Lista de drones utilizados'", "'#Lista de figuras'", 
			null, null, null, null, null, "'minutos'", "'unidades.'", "'Dear,'", 
			"'Dear Sirs,'", null, "'Show Proposal'", "'Being certain that we will be the target of your preference.'", 
			"'Looking forward to hearing from you soon.'", "'We subscribe at your disposal.'", 
			"'Best regards,'", "'#List of used drones'", "'#List of figures'", null, 
			null, null, null, null, "'minutes'", "'PROP-'", null, "'units.'", null, 
			null, null, "'CRM Manager'", "'[page break]'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BREAKLINE", "WS", "SPACE", "SYMBOL", "EXMOS_SENHORES", "REFERENCIA", 
			"PROPOSTA_PT", "ESTANDO_CERTOS_PT", "SUBSCRIBE_PT", "BEST_REGARDS_PT", 
			"LISTA_DRONES_PT", "LISTA_FIGURAS_PT", "ANEXO_PT", "LOCAL_PT", "DATA_PT", 
			"HORA_PT", "DURACAO_PT", "WORD_MINUTES_PT", "WORD_UNITS_PT", "DEAR", 
			"DEAR_SIRS", "REFERENCE", "PROPOSTA_EN", "BEING_CERTAIN_EN", "LOOKING_FORWARD", 
			"SUBSCRIBE_EN", "BEST_REGARDS_EN", "LISTA_DRONES_EN", "LISTA_FIGURAS_EN", 
			"ANEXO_EN", "LOCATION_EN", "DATE_EN", "TIME_EN", "DURATION_EN", "WORD_MINUTES_EN", 
			"PROP", "VAT", "WORD_UNITS_EN", "DRONE_ENTRY_PT", "DRONE_ENTRY_EN", "FIGURE_ENTRY", 
			"CRM_MANAGER", "PAGE_BREAK", "DIGIT", "LETTER", "NAME", "VALUE", "DOUBLE", 
			"MODEL", "SEPARATOR", "HOUR", "MINUTE", "DAY", "MONTH", "YEAR", "CURRENCY", 
			"INSURANCE_AMOUNT", "TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ProposalParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProposalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public ProposalPTContext proposalPT() {
			return getRuleContext(ProposalPTContext.class,0);
		}
		public ProposalENContext proposalEN() {
			return getRuleContext(ProposalENContext.class,0);
		}
		public ProposalEN_2Context proposalEN_2() {
			return getRuleContext(ProposalEN_2Context.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProposalParserVisitor ) return ((ProposalParserVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			setState(33);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXMOS_SENHORES:
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				proposalPT();
				}
				break;
			case DEAR_SIRS:
				enterOuterAlt(_localctx, 2);
				{
				setState(31);
				proposalEN();
				}
				break;
			case DEAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(32);
				proposalEN_2();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProposalPTContext extends ParserRuleContext {
		public TerminalNode EXMOS_SENHORES() { return getToken(ProposalParser.EXMOS_SENHORES, 0); }
		public List<TerminalNode> BREAKLINE() { return getTokens(ProposalParser.BREAKLINE); }
		public TerminalNode BREAKLINE(int i) {
			return getToken(ProposalParser.BREAKLINE, i);
		}
		public CompanyBlockContext companyBlock() {
			return getRuleContext(CompanyBlockContext.class,0);
		}
		public TerminalNode REFERENCIA() { return getToken(ProposalParser.REFERENCIA, 0); }
		public TerminalNode PROPOSTA_PT() { return getToken(ProposalParser.PROPOSTA_PT, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode ESTANDO_CERTOS_PT() { return getToken(ProposalParser.ESTANDO_CERTOS_PT, 0); }
		public TerminalNode SUBSCRIBE_PT() { return getToken(ProposalParser.SUBSCRIBE_PT, 0); }
		public TerminalNode BEST_REGARDS_PT() { return getToken(ProposalParser.BEST_REGARDS_PT, 0); }
		public TerminalNode NAME() { return getToken(ProposalParser.NAME, 0); }
		public TerminalNode CRM_MANAGER() { return getToken(ProposalParser.CRM_MANAGER, 0); }
		public TerminalNode PAGE_BREAK() { return getToken(ProposalParser.PAGE_BREAK, 0); }
		public TerminalNode ANEXO_PT() { return getToken(ProposalParser.ANEXO_PT, 0); }
		public LocationInfoPTContext locationInfoPT() {
			return getRuleContext(LocationInfoPTContext.class,0);
		}
		public TerminalNode LISTA_DRONES_PT() { return getToken(ProposalParser.LISTA_DRONES_PT, 0); }
		public TerminalNode LISTA_FIGURAS_PT() { return getToken(ProposalParser.LISTA_FIGURAS_PT, 0); }
		public List<DroneEntryPTContext> droneEntryPT() {
			return getRuleContexts(DroneEntryPTContext.class);
		}
		public DroneEntryPTContext droneEntryPT(int i) {
			return getRuleContext(DroneEntryPTContext.class,i);
		}
		public List<FigureEntryContext> figureEntry() {
			return getRuleContexts(FigureEntryContext.class);
		}
		public FigureEntryContext figureEntry(int i) {
			return getRuleContext(FigureEntryContext.class,i);
		}
		public ProposalPTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proposalPT; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProposalParserVisitor ) return ((ProposalParserVisitor<? extends T>)visitor).visitProposalPT(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProposalPTContext proposalPT() throws RecognitionException {
		ProposalPTContext _localctx = new ProposalPTContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_proposalPT);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(EXMOS_SENHORES);
			setState(36);
			match(BREAKLINE);
			setState(37);
			companyBlock();
			setState(38);
			match(REFERENCIA);
			setState(39);
			match(BREAKLINE);
			setState(40);
			match(PROPOSTA_PT);
			setState(41);
			match(BREAKLINE);
			setState(42);
			match(BREAKLINE);
			setState(43);
			body();
			setState(44);
			match(ESTANDO_CERTOS_PT);
			setState(45);
			match(BREAKLINE);
			setState(46);
			match(BREAKLINE);
			setState(47);
			match(SUBSCRIBE_PT);
			setState(48);
			match(BREAKLINE);
			setState(49);
			match(BREAKLINE);
			setState(50);
			match(BEST_REGARDS_PT);
			setState(51);
			match(BREAKLINE);
			setState(52);
			match(BREAKLINE);
			setState(53);
			match(NAME);
			setState(54);
			match(BREAKLINE);
			setState(55);
			match(CRM_MANAGER);
			setState(56);
			match(BREAKLINE);
			setState(57);
			match(BREAKLINE);
			setState(58);
			match(PAGE_BREAK);
			setState(59);
			match(BREAKLINE);
			setState(60);
			match(BREAKLINE);
			setState(61);
			match(ANEXO_PT);
			setState(62);
			match(BREAKLINE);
			setState(63);
			match(BREAKLINE);
			setState(64);
			locationInfoPT();
			setState(65);
			match(LISTA_DRONES_PT);
			setState(66);
			match(BREAKLINE);
			setState(68); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(67);
				droneEntryPT();
				}
				}
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DRONE_ENTRY_PT );
			setState(72);
			match(BREAKLINE);
			setState(73);
			match(BREAKLINE);
			setState(74);
			match(LISTA_FIGURAS_PT);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FIGURE_ENTRY) {
				{
				{
				setState(75);
				figureEntry();
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProposalENContext extends ParserRuleContext {
		public TerminalNode DEAR_SIRS() { return getToken(ProposalParser.DEAR_SIRS, 0); }
		public List<TerminalNode> BREAKLINE() { return getTokens(ProposalParser.BREAKLINE); }
		public TerminalNode BREAKLINE(int i) {
			return getToken(ProposalParser.BREAKLINE, i);
		}
		public CompanyBlockContext companyBlock() {
			return getRuleContext(CompanyBlockContext.class,0);
		}
		public TerminalNode REFERENCE() { return getToken(ProposalParser.REFERENCE, 0); }
		public TerminalNode PROPOSTA_EN() { return getToken(ProposalParser.PROPOSTA_EN, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode BEING_CERTAIN_EN() { return getToken(ProposalParser.BEING_CERTAIN_EN, 0); }
		public TerminalNode SUBSCRIBE_EN() { return getToken(ProposalParser.SUBSCRIBE_EN, 0); }
		public TerminalNode BEST_REGARDS_EN() { return getToken(ProposalParser.BEST_REGARDS_EN, 0); }
		public TerminalNode NAME() { return getToken(ProposalParser.NAME, 0); }
		public TerminalNode CRM_MANAGER() { return getToken(ProposalParser.CRM_MANAGER, 0); }
		public TerminalNode PAGE_BREAK() { return getToken(ProposalParser.PAGE_BREAK, 0); }
		public TerminalNode ANEXO_EN() { return getToken(ProposalParser.ANEXO_EN, 0); }
		public LocationInfoENContext locationInfoEN() {
			return getRuleContext(LocationInfoENContext.class,0);
		}
		public TerminalNode LISTA_DRONES_EN() { return getToken(ProposalParser.LISTA_DRONES_EN, 0); }
		public TerminalNode LISTA_FIGURAS_EN() { return getToken(ProposalParser.LISTA_FIGURAS_EN, 0); }
		public List<DroneEntryENContext> droneEntryEN() {
			return getRuleContexts(DroneEntryENContext.class);
		}
		public DroneEntryENContext droneEntryEN(int i) {
			return getRuleContext(DroneEntryENContext.class,i);
		}
		public List<FigureEntryContext> figureEntry() {
			return getRuleContexts(FigureEntryContext.class);
		}
		public FigureEntryContext figureEntry(int i) {
			return getRuleContext(FigureEntryContext.class,i);
		}
		public ProposalENContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proposalEN; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProposalParserVisitor ) return ((ProposalParserVisitor<? extends T>)visitor).visitProposalEN(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProposalENContext proposalEN() throws RecognitionException {
		ProposalENContext _localctx = new ProposalENContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_proposalEN);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(DEAR_SIRS);
			setState(82);
			match(BREAKLINE);
			setState(83);
			companyBlock();
			setState(84);
			match(REFERENCE);
			setState(85);
			match(BREAKLINE);
			setState(86);
			match(PROPOSTA_EN);
			setState(87);
			match(BREAKLINE);
			setState(88);
			match(BREAKLINE);
			setState(89);
			body();
			setState(90);
			match(BEING_CERTAIN_EN);
			setState(91);
			match(BREAKLINE);
			setState(92);
			match(BREAKLINE);
			setState(93);
			match(SUBSCRIBE_EN);
			setState(94);
			match(BREAKLINE);
			setState(95);
			match(BREAKLINE);
			setState(96);
			match(BEST_REGARDS_EN);
			setState(97);
			match(BREAKLINE);
			setState(98);
			match(BREAKLINE);
			setState(99);
			match(NAME);
			setState(100);
			match(BREAKLINE);
			setState(101);
			match(CRM_MANAGER);
			setState(102);
			match(BREAKLINE);
			setState(103);
			match(BREAKLINE);
			setState(104);
			match(PAGE_BREAK);
			setState(105);
			match(BREAKLINE);
			setState(106);
			match(BREAKLINE);
			setState(107);
			match(ANEXO_EN);
			setState(108);
			match(BREAKLINE);
			setState(109);
			match(BREAKLINE);
			setState(110);
			locationInfoEN();
			setState(111);
			match(LISTA_DRONES_EN);
			setState(112);
			match(BREAKLINE);
			setState(114); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(113);
				droneEntryEN();
				}
				}
				setState(116); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DRONE_ENTRY_EN );
			setState(118);
			match(BREAKLINE);
			setState(119);
			match(BREAKLINE);
			setState(120);
			match(LISTA_FIGURAS_EN);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FIGURE_ENTRY) {
				{
				{
				setState(121);
				figureEntry();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProposalEN_2Context extends ParserRuleContext {
		public TerminalNode DEAR() { return getToken(ProposalParser.DEAR, 0); }
		public List<TerminalNode> BREAKLINE() { return getTokens(ProposalParser.BREAKLINE); }
		public TerminalNode BREAKLINE(int i) {
			return getToken(ProposalParser.BREAKLINE, i);
		}
		public List<TerminalNode> NAME() { return getTokens(ProposalParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(ProposalParser.NAME, i);
		}
		public CompanyBlockContext companyBlock() {
			return getRuleContext(CompanyBlockContext.class,0);
		}
		public TerminalNode REFERENCE() { return getToken(ProposalParser.REFERENCE, 0); }
		public TerminalNode PROPOSTA_EN() { return getToken(ProposalParser.PROPOSTA_EN, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode LOOKING_FORWARD() { return getToken(ProposalParser.LOOKING_FORWARD, 0); }
		public TerminalNode BEST_REGARDS_EN() { return getToken(ProposalParser.BEST_REGARDS_EN, 0); }
		public TerminalNode CRM_MANAGER() { return getToken(ProposalParser.CRM_MANAGER, 0); }
		public TerminalNode PAGE_BREAK() { return getToken(ProposalParser.PAGE_BREAK, 0); }
		public TerminalNode ANEXO_EN() { return getToken(ProposalParser.ANEXO_EN, 0); }
		public LocationInfoENContext locationInfoEN() {
			return getRuleContext(LocationInfoENContext.class,0);
		}
		public TerminalNode LISTA_DRONES_EN() { return getToken(ProposalParser.LISTA_DRONES_EN, 0); }
		public TerminalNode LISTA_FIGURAS_EN() { return getToken(ProposalParser.LISTA_FIGURAS_EN, 0); }
		public List<DroneEntryENContext> droneEntryEN() {
			return getRuleContexts(DroneEntryENContext.class);
		}
		public DroneEntryENContext droneEntryEN(int i) {
			return getRuleContext(DroneEntryENContext.class,i);
		}
		public List<FigureEntryContext> figureEntry() {
			return getRuleContexts(FigureEntryContext.class);
		}
		public FigureEntryContext figureEntry(int i) {
			return getRuleContext(FigureEntryContext.class,i);
		}
		public ProposalEN_2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proposalEN_2; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProposalParserVisitor ) return ((ProposalParserVisitor<? extends T>)visitor).visitProposalEN_2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProposalEN_2Context proposalEN_2() throws RecognitionException {
		ProposalEN_2Context _localctx = new ProposalEN_2Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_proposalEN_2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(DEAR);
			setState(128);
			match(BREAKLINE);
			setState(129);
			match(NAME);
			setState(130);
			match(BREAKLINE);
			setState(131);
			companyBlock();
			setState(132);
			match(REFERENCE);
			setState(133);
			match(BREAKLINE);
			setState(134);
			match(PROPOSTA_EN);
			setState(135);
			match(BREAKLINE);
			setState(136);
			match(BREAKLINE);
			setState(137);
			body();
			setState(138);
			match(LOOKING_FORWARD);
			setState(139);
			match(BREAKLINE);
			setState(140);
			match(BREAKLINE);
			setState(141);
			match(BEST_REGARDS_EN);
			setState(142);
			match(BREAKLINE);
			setState(143);
			match(BREAKLINE);
			setState(144);
			match(NAME);
			setState(145);
			match(BREAKLINE);
			setState(146);
			match(CRM_MANAGER);
			setState(147);
			match(BREAKLINE);
			setState(148);
			match(BREAKLINE);
			setState(149);
			match(PAGE_BREAK);
			setState(150);
			match(BREAKLINE);
			setState(151);
			match(BREAKLINE);
			setState(152);
			match(ANEXO_EN);
			setState(153);
			match(BREAKLINE);
			setState(154);
			match(BREAKLINE);
			setState(155);
			locationInfoEN();
			setState(156);
			match(LISTA_DRONES_EN);
			setState(157);
			match(BREAKLINE);
			setState(159); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(158);
				droneEntryEN();
				}
				}
				setState(161); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DRONE_ENTRY_EN );
			setState(163);
			match(BREAKLINE);
			setState(164);
			match(BREAKLINE);
			setState(165);
			match(LISTA_FIGURAS_EN);
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FIGURE_ENTRY) {
				{
				{
				setState(166);
				figureEntry();
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompanyBlockContext extends ParserRuleContext {
		public CompanyNameContext companyName() {
			return getRuleContext(CompanyNameContext.class,0);
		}
		public List<TerminalNode> BREAKLINE() { return getTokens(ProposalParser.BREAKLINE); }
		public TerminalNode BREAKLINE(int i) {
			return getToken(ProposalParser.BREAKLINE, i);
		}
		public CompanyAddressContext companyAddress() {
			return getRuleContext(CompanyAddressContext.class,0);
		}
		public CompanyVatContext companyVat() {
			return getRuleContext(CompanyVatContext.class,0);
		}
		public CompanyBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_companyBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProposalParserVisitor ) return ((ProposalParserVisitor<? extends T>)visitor).visitCompanyBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompanyBlockContext companyBlock() throws RecognitionException {
		CompanyBlockContext _localctx = new CompanyBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_companyBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			companyName();
			setState(173);
			match(BREAKLINE);
			setState(174);
			companyAddress();
			setState(175);
			match(BREAKLINE);
			setState(176);
			companyVat();
			setState(177);
			match(BREAKLINE);
			setState(178);
			match(BREAKLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompanyNameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(ProposalParser.NAME, 0); }
		public CompanyNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_companyName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProposalParserVisitor ) return ((ProposalParserVisitor<? extends T>)visitor).visitCompanyName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompanyNameContext companyName() throws RecognitionException {
		CompanyNameContext _localctx = new CompanyNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_companyName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompanyAddressContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(ProposalParser.TEXT, 0); }
		public CompanyAddressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_companyAddress; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProposalParserVisitor ) return ((ProposalParserVisitor<? extends T>)visitor).visitCompanyAddress(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompanyAddressContext companyAddress() throws RecognitionException {
		CompanyAddressContext _localctx = new CompanyAddressContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_companyAddress);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompanyVatContext extends ParserRuleContext {
		public TerminalNode VAT() { return getToken(ProposalParser.VAT, 0); }
		public TerminalNode VALUE() { return getToken(ProposalParser.VALUE, 0); }
		public CompanyVatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_companyVat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProposalParserVisitor ) return ((ProposalParserVisitor<? extends T>)visitor).visitCompanyVat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompanyVatContext companyVat() throws RecognitionException {
		CompanyVatContext _localctx = new CompanyVatContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_companyVat);
		try {
			setState(187);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BREAKLINE:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case VAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(185);
				match(VAT);
				}
				break;
			case VALUE:
				enterOuterAlt(_localctx, 3);
				{
				setState(186);
				match(VALUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
